--- a/labware/Applied Biosystems 96 Aluminum Block 200 µL.json
+++ b/labware/Applied Biosystems 96 Aluminum Block 200 µL.json
@@ -1009,7 +1009,7 @@
             "metadata": {
                 "displayName": "Applied Biosystems 96 Aluminum Block 200 µL",
                 "displayCategory": "aluminumBlock",
-                "wellBottomShape": "u"
+                "wellBottomShape": "v"
             },
             "brand": {
                 "brand": "Applied Biosystems",
